--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 header{
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     background-image: linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,4)), url('./imagens/fundosite.jpg');
     background-position: center;
     background-size: cover;
@@ -60,6 +60,15 @@ header .menu .ativo, header .menu a:hover{
     color: white;
     font-size: 60px;
     animation: aumentar 25s infinite;
+}
+
+.principal .imglogo{
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 @keyframes aumentar {
@@ -176,4 +185,24 @@ header .menu .ativo, header .menu a:hover{
         top: 300px;
     }
 }
+
+.textoparagrafos h2{
+    position: relative;
+    left: 50px;
+    padding: 3px; 
+}
+
+
+.textoparagrafos p{
+    text-align: justify;
+    margin-left: 20px;
+    margin-right: 20px;
+    text-indent: 50px;    
+}
+
+.textoparagrafos {
+    background-color: rgb(234, 231, 214);
+}
+
+
 
