--- a/style.css
+++ b/style.css
@@ -6,11 +6,20 @@
 
 header{
     width: 100%;
-    height: 80vh;
+    height:65vh;
     background-image: linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,4)), url('./imagens/fundosite.jpg');
     background-position: center;
     background-size: cover;
 }
+
+body{
+    width: 98vw; /* Define a largura do corpo como 100% da largura da tela */
+    margin: 0; /* Remove as margens padrão do corpo */
+    padding: 0; /* Remove o preenchimento padrão do corpo */
+    box-sizing: border-box; 
+    
+}
+
 
 a{
     text-decoration: none;
@@ -64,11 +73,11 @@ header .menu .ativo, header .menu a:hover{
 
 .principal .imglogo{
     position: absolute;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     top: 30%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);    
 }
 
 @keyframes aumentar {
@@ -98,8 +107,9 @@ header .menu .ativo, header .menu a:hover{
 .rodape .rodape1 {
     background-color: black;
     color: white;
-    padding: 2px 2px;
-    font-size: 40px;
+    padding: 4px 5px;
+    font-size: 30px;
+    
 }
 
 .rodape .rodape2 {
@@ -109,12 +119,18 @@ header .menu .ativo, header .menu a:hover{
     text-align: center;
 }
 
+.rodape2 #logorodape{
+    width: 100px;
+    
+}
+
+
 .img .img1{
     position: absolute;
     border-radius: 15rcap;
     width: 10%;
     height: 10%;
-    top: 250px;
+    top: 150px;
     left: 50px;
     background-color: silver;   
     border: solid 3px rgb(242, 206, 7);
@@ -138,7 +154,7 @@ header .menu .ativo, header .menu a:hover{
     border-radius: 15rcap;
     width: 10%;
     height: 10%;
-    top: 450px;
+    top: 250px;
     left: 50px;
     background-color: silver;   
     border: solid 3px rgb(198, 22, 198);
@@ -166,7 +182,7 @@ header .menu .ativo, header .menu a:hover{
     border-radius: 15rcap;
     width: 10%;
     height: 10%;
-    top: 650px;
+    top: 350px;
     left: 50px;
     background-color:silver;    
     border: solid 3px rgb(43, 225, 23);
@@ -195,8 +211,8 @@ header .menu .ativo, header .menu a:hover{
 
 .textoparagrafos p{
     text-align: justify;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
     text-indent: 50px;    
 }
 
@@ -204,5 +220,93 @@ header .menu .ativo, header .menu a:hover{
     background-color: rgb(234, 231, 214);
 }
 
+.icons i{
+    color: white;
+    position: relative;
+    margin-left: 1%;
+    left: 38%;
+    font-size: 300%;
+   
+}
+
+.icons #youtube{
+    color: red;
+}
+
+.icons #facebook{
+    color: rgb(22, 111, 235);
+}
+
+.icons #linkedin{
+    color: rgb(4, 55, 209);
+}
+
+.icons #instagram{
+    color: rgb(178, 10, 83)
+}
+
+.servicos{
+    background-color: rgba(198, 204, 221, 0.103);
+    
+}
+
+.servicos h1{
+    margin-left: 3%;
+    font-size: 40px;
+    text-align: center;
+}
+
+.servicos ul{
+    margin-left: 5%;
+    margin-top: 3%;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+
+.consultores{
+    background-color: black;
+    color: white;
+    
+}
+
+.consultores h1{
+    text-align: center;
+    font-size: 40px;
+}
+
+
+.consultores #edu{
+    position: absolute;
+    border-radius: 15%;
+    width: 10%;
+    height: 20%;
+    left: 15%;
+
+}
+
+.eduu p{
+    margin-right: 70%;
+    margin-block: 10%;
+    margin-left: 15%;
+    
+}
+
+.consultores #thiago{
+    position: absolute;
+    border-radius: 15%;
+    width: 10%;
+    height: 20%;
+    left: 15%;
+    margin-top: 40%;
+    
+}
+
+.thi p{
+    margin-right: 70%;
+    margin-block: 10%;
+    margin-left: 15%;
+    margin-top: 23%;
+}
 
 
