--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ header .menu{
     align-items: center;
     justify-content: space-between;
     padding: 40px;
+    
 }
 
 header .menu li{
@@ -57,6 +58,7 @@ header .menu .ativo, header .menu a:hover{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    font-family: "Platypi", serif;
 
 }
 
@@ -69,6 +71,7 @@ header .menu .ativo, header .menu a:hover{
     color: white;
     font-size: 60px;
     animation: aumentar 25s infinite;
+    
 }
 
 .principal .imglogo{
@@ -213,7 +216,8 @@ header .menu .ativo, header .menu a:hover{
     text-align: justify;
     margin-left: 15px;
     margin-right: 15px;
-    text-indent: 50px;    
+    text-indent: 50px;  
+    font-family: "Jersey 10 Charted", sans-serif;  
 }
 
 .textoparagrafos {
@@ -261,6 +265,8 @@ header .menu .ativo, header .menu a:hover{
     margin-top: 3%;
     font-size: 20px;
     font-weight: bold;
+    
+    
 }
 
 
@@ -292,6 +298,7 @@ header .menu .ativo, header .menu a:hover{
     
 }
 
+
 .consultores #thiago{
     position: absolute;
     border-radius: 15%;
@@ -309,4 +316,49 @@ header .menu .ativo, header .menu a:hover{
     margin-top: 23%;
 }
 
+section.formulario{
+    padding: 10px 30%;
+    font-size: 150%;
+    right: 50%;
+    
+}
 
+section.formulario h2{
+    text-align: center;
+    margin-top: -20%;
+    padding-bottom: 10%;
+}
+
+form{
+    max-width: 500px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+    padding-bottom: 15%;
+}
+
+form input, form textarea{
+    width: 100%;
+    background-color: rgba(61, 60, 60, 0.411);
+    border: 0;
+    outline: 0;
+    padding: 20px 15px;
+    border-radius: 15px;
+    color: black;
+    font-size: 18px;
+}
+
+form input::placeholder{
+    color: black;
+}
+
+form textarea{
+    resize: none;
+}
+
+form .btn-enviar input{
+    font-weight: 700;
+    cursor: pointer;    
+}
